@@ -5,9 +5,11 @@
 - added: `controller.sitemap_url([id])` returns an URL from the sitemap
 - added: `controller.sitemap_name([id])` returns a name/title from the sitemap
 - added: `controller.sitemap_change(id, property, newvalue)` can change a current value in the sitemap
+- added: `controller.sitemap_navigation([parent], [langauge])` can get list of all items according to the parent
 - added: `@{sitemap_url([id], [arg1], [arg2], [argN])}` returns an URL from the sitemap
 - added: `@{sitemap_name([id], [arg1], [arg2], [argN])}` returns a name/title from the sitemap
 - added: `@{sitemap_change(id, property, newvalue)}` can change a current value in the sitemap
+- added: `@{sitemap_navigation([parent], [language])` can get list of all items according to the parent
 - added: `/startup/` all scripts in this directory are executed only one (then are renamed automatically)
 - added: `F.route()` supports a new flag: `cors` (creates a cors route) and `credentials` (enables cookies for cors)
 - added: `ErrorBuilder.plain()` returns all errors as a simple string
@@ -23,9 +25,9 @@
 - added: `String.isPhone()` for phone number validation
 - added: `String.isUID()` for UID() validation
 - added: `String.isZIP()`
-- added: new schemabuilder types `Email` (string, maxlength 120), `Phone` (string, maxlength 20), `Zip` (string, maxlength 10), `Capitalize` (string), `Lowerize` (string), `Upperize` (string), `UID` (string, minlength 18, maxlength 20), `Url` (string, maxlength 500), `JSON` (string)
 - added: `Pagination.html(max, format)` returns `String`
 - added: `Pagination.json(max, format)` returns `String`
+- added: new schemabuilder types `Email` (string, maxlength 120), `Phone` (string, maxlength 20), `Zip` (string, maxlength 10), `Capitalize` (string), `Lowerize` (string), `Upperize` (string), `UID` (string, minlength 18, maxlength 20), `Url` (string, maxlength 500), `JSON` (string)
 - added: `SchemaBuilderEntity.fields` and it contains all field names in array.
 - added: `Mail.send(smtp, options, messages, [callback])` messages must be array
 - added: `Mail.send2(messages, [callback])` sends messages according to the framework configuration
